[tool.poetry]
name = "tele_photo_changer"
version = "0.1.0"
description = "Telegram photos changer"
authors = ["DzesenKopeykin <kopeykindzzesen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.dev-dependencies]
black = ">=21.12b0,<22"
isort = ">=5.10.1,<6"
mypy = ">=0.930,<1"
flake8 = ">=4.0.1,<5"
pytest = ">=6.2.5,<7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
